feat(auth): auth features (login & register)

--- a/.env
+++ b/.env
@@ -1,7 +1,1 @@
-PGUSER=user
-PGHOST=localhost
-PGDATABASE=safer-db
-PGPASSWORD=blackmamba
-PGPORT=5432
-
-JWT_SECRET=hello
+ATLAS_URI=mongodb+srv://wdcvalentin:admin@cluster0.aoztn.gcp.mongodb.net/?retryWrites=true&w=majority
